Interface Algorithm with Accessor Support, no ViennaData
interface algorithm ported to accessor and appendix type (instead of ViennaData) in segmentation
some change counter changes
inserter manages max_id when creating element without id generator
add_to_segment now recursively adds boundary elements because some algorithms won't work otherwise
change counter support for segments
default view config uses std::set instead of std::deque for containers because of possible duplicates of elements
some fixes & code clean-up

--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 add_executable(coboundary_iteration coboundary_iteration.cpp)
 add_executable(collection_test collection_test.cpp)
-add_executable(container_collection_test container_collection_test.cpp)
+# add_executable(container_collection_test container_collection_test.cpp)
 add_executable(container_collection_test_2 container_collection_test_2.cpp)
 add_executable(container_test container_test.cpp)
 #add_executable(element_test element_test.cpp)
@@ -23,4 +23,5 @@ add_executable(point_test point_test.cpp)
 add_executable(segments segments.cpp)
 add_executable(handle_test handle_test.cpp)
 add_executable(accessor_test accessor_test.cpp)
+add_executable(interface_test interface_test.cpp)
 #add_executable(view_test view_test.cpp)
