--- a/examples/storage_layer/CMakeLists.txt
+++ b/examples/storage_layer/CMakeLists.txt
@@ -24,4 +24,6 @@ add_executable(segments segments.cpp)
 add_executable(handle_test handle_test.cpp)
 add_executable(accessor_test accessor_test.cpp)
 add_executable(interface_test interface_test.cpp)
+add_executable(vtk_reader vtk_reader.cpp)
+add_executable(vtk_writer vtk_writer.cpp)
 #add_executable(view_test view_test.cpp)
