--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 ADD_EXECUTABLE(algorithms          algorithms.cpp)
 ADD_EXECUTABLE(domain_setup        domain_setup.cpp)
-ADD_EXECUTABLE(finite_volumes      finite_volumes.cpp)
+# ADD_EXECUTABLE(finite_volumes      finite_volumes.cpp)
 ADD_EXECUTABLE(io                  io.cpp)
 ADD_EXECUTABLE(iterators           iterators.cpp)
 ADD_EXECUTABLE(multi_segment       multi_segment.cpp)
