ViennaData is now truly optional: Added ENABLE_VIENNADATA switch to CMake build system.
Still a lot of accessor-based functionality not available out of the box.
A few more improvements should be applied before the release.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,8 @@
 #   add_test(${PROG} ${PROG}-test)
 #endforeach(PROG)
 
-ADD_EXECUTABLE(external_linkage-test  src/external_1.cpp src/external_2.cpp)
-ADD_test(external_linkage external_linkage-test)
-
+if (ENABLE_VIENNADATA)
+  ADD_EXECUTABLE(external_linkage-test  src/external_1.cpp src/external_2.cpp)
+  ADD_test(external_linkage external_linkage-test)
+endif()
 
