--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -15,8 +15,8 @@ add_executable(domain_test_4 domain_test_4.cpp)
 add_executable(domain_test_5 domain_test_5.cpp)
 add_executable(polygon_test polygon_test.cpp)
 add_executable(point_test point_test.cpp)
-# add_executable(plc_test plc_test.cpp)
-# add_executable(plc_reader_test plc_reader_test.cpp)
+add_executable(plc_test plc_test.cpp)
+add_executable(plc_reader_test plc_reader_test.cpp)
 add_executable(handle_test handle_test.cpp)
 if (ENABLE_VIENNADATA)
   add_executable(accessor_test accessor_test.cpp)
