Renamed tutorial files (no _test)

--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -30,13 +30,13 @@ add_executable(accessor             accessor.cpp)
 ADD_EXECUTABLE(algorithms           algorithms.cpp)
 add_executable(coboundary_iteration coboundary_iteration.cpp)
 ADD_EXECUTABLE(domain_setup         domain_setup.cpp)
-add_executable(element_erase_test   element_erase_test.cpp)
+add_executable(element_erase        element_erase.cpp)
 ADD_EXECUTABLE(finite_volumes       finite_volumes.cpp)
 ADD_EXECUTABLE(io                   io.cpp)
 ADD_EXECUTABLE(iterators            iterators.cpp)
 ADD_EXECUTABLE(multi_segment        multi_segment.cpp)
 add_executable(neighbour_iteration  neighbour_iteration.cpp)
-add_executable(point_test           point_test.cpp)
-add_executable(polygon_test         polygon_test.cpp)
+add_executable(point                point.cpp)
+add_executable(polygon              polygon.cpp)
 add_executable(segments             segments.cpp)
-add_executable(interface_test       interface_test.cpp)
+add_executable(interface            interface.cpp)
