--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -36,7 +36,7 @@ ADD_EXECUTABLE(io                   io.cpp)
 ADD_EXECUTABLE(iterators            iterators.cpp)
 ADD_EXECUTABLE(multi_segment        multi_segment.cpp)
 add_executable(neighbour_iteration  neighbour_iteration.cpp)
-add_executable(point                point.cpp)
+# add_executable(point                point.cpp)
 add_executable(polygon              polygon.cpp)
 add_executable(segments             segments.cpp)
 add_executable(interface            interface.cpp)
