re-added temporarily, fixed includes

--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -1,30 +1,3 @@
-
-# Tests (to be integrated in tests/)
-# add_executable(collection_test collection_test.cpp)
-# add_executable(container_collection_test_2 container_collection_test_2.cpp)
-# add_executable(container_test container_test.cpp)
-# add_executable(copy_domain_test copy_domain_test.cpp)
-# add_executable(element_test_3 element_test_3.cpp)
-# add_executable(element_test_4 element_test_4.cpp)
-# add_executable(element_erase_refine_test element_erase_refine_test.cpp)
-# add_executable(domain_test domain_test.cpp)
-# add_executable(domain_test_2 domain_test_2.cpp)
-# add_executable(domain_test_3 domain_test_3.cpp)
-# add_executable(domain_test_4 domain_test_4.cpp)
-# add_executable(domain_test_5 domain_test_5.cpp)
-# add_executable(trigate_read_test trigate_read_test.cpp)
-# add_executable(plc_test plc_test.cpp)
-# add_executable(plc_reader_test plc_reader_test.cpp)
-# add_executable(handle_test handle_test.cpp)
-# if (ENABLE_VIENNADATA)
-#   add_executable(accessor_test accessor_test.cpp)
-# endif()
-# add_executable(coboundary_iteration_with_segments coboundary_iteration_with_segments.cpp)
-#ADD_EXECUTABLE(slim_domain         slim_domain.cpp)
-#ADD_EXECUTABLE(store_access_data   store_access_data.cpp)
-# add_executable(vtk_reader           vtk_reader.cpp)
-# add_executable(vtk_writer           vtk_writer.cpp)
-
 # Tutorials:
 add_executable(accessor             accessor.cpp)
 ADD_EXECUTABLE(algorithms           algorithms.cpp)
@@ -36,7 +9,36 @@ ADD_EXECUTABLE(io                   io.cpp)
 ADD_EXECUTABLE(iterators            iterators.cpp)
 ADD_EXECUTABLE(multi_segment        multi_segment.cpp)
 add_executable(neighbour_iteration  neighbour_iteration.cpp)
-# add_executable(point                point.cpp)
 add_executable(polygon              polygon.cpp)
 add_executable(segments             segments.cpp)
 add_executable(interface            interface.cpp)
+
+
+
+
+# Old (TODO cleanup, merge to tests)
+add_executable(collection_test              old/collection_test.cpp)
+add_executable(container_collection_test_2  old/container_collection_test_2.cpp)
+add_executable(container_test               old/container_test.cpp)
+add_executable(copy_domain_test             old/copy_domain_test.cpp)
+add_executable(element_test_3               old/element_test_3.cpp)
+add_executable(element_test_4               old/element_test_4.cpp)
+add_executable(element_erase_refine_test    old/element_erase_refine_test.cpp)
+add_executable(domain_test                  old/domain_test.cpp)
+add_executable(domain_test_2                old/domain_test_2.cpp)
+add_executable(domain_test_3                old/domain_test_3.cpp)
+add_executable(domain_test_4                old/domain_test_4.cpp)
+add_executable(domain_test_5                old/domain_test_5.cpp)
+add_executable(trigate_read_test            old/trigate_read_test.cpp)
+add_executable(plc_test                     old/plc_test.cpp)
+add_executable(plc_reader_test              old/plc_reader_test.cpp)
+add_executable(handle_test                  old/handle_test.cpp)
+if (ENABLE_VIENNADATA)
+  add_executable(accessor_test              old/accessor_test.cpp)
+endif()
+add_executable(coboundary_iteration_with_segments     old/coboundary_iteration_with_segments.cpp)
+# ADD_EXECUTABLE(slim_domain                  old/slim_domain.cpp)
+# ADD_EXECUTABLE(store_access_data            old/store_access_data.cpp)
+add_executable(vtk_reader                   old/vtk_reader.cpp)
+add_executable(vtk_writer                   old/vtk_writer.cpp)
+add_executable(point                        old/point.cpp)
