--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 # tests with CPU backend
-foreach(PROG boundary coboundary 
+foreach(PROG boundary coboundary
             distance_1d distance_2d distance_3d distance_boundary
             hypercube interface io mesh point
             refinement refinement2 refinement3 refinement-triangles
-            segment simplex surface
+            scale segment simplex surface
             voronoi_hex voronoi_rect voronoi_tet voronoi_triangle voronoi_line
             vtk_writer
 #             serialization
