angle(): Refactored interface, added tests and documentation.
The following interface is now in use
 angle(): Compute angles between vectors
 solid_angle(): Compute the solid angle
 dihedral_angle(): You guess it.
The former two take the 'origin' as an optional last parameter, which is by default the origin of the coordinate system.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 # tests with CPU backend
-foreach(PROG boundary coboundary
+foreach(PROG angle boundary coboundary
             distance_1d distance_2d distance_3d distance_boundary
             hypercube interface io mesh point
             refinement refinement2 refinement3 refinement-triangles
