Added example for PLC (reading and accessing)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -30,6 +30,7 @@ set(EXAMPLES_TESTDATA
    data/tets_with_data_1.vtu
    data/tets_with_data_main.pvd
    data/twocubes.mesh
+   data/test.poly
    )
 foreach(f IN LISTS EXAMPLES_TESTDATA)
    configure_file(${f} "${CMAKE_CURRENT_BINARY_DIR}/${f}" COPYONLY)
