added vmesh_creator io class and example: mesh -> *.vmesh

--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(segments             segments.cpp)
 add_executable(interface            interface.cpp)
 add_executable(read_plc             read_plc.cpp)
 add_executable(dump_info            dump_info.cpp)
+add_executable(vmesh_creator        vmesh_creator.cpp)
 
 
 
