--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(read_plc             read_plc.cpp)
 add_executable(dump_info            dump_info.cpp)
 add_executable(vmesh_creator        vmesh_creator.cpp)
 add_executable(copy_elements        copy_elements.cpp)
+add_executable(thin_mesh            thin_mesh.cpp)
 
 
 
