CMake: Modified foreach() loop to be compatible with CMake 2.6.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -33,7 +33,7 @@ set(EXAMPLES_TESTDATA
    data/test.poly
    data/test.bnd
    )
-foreach(f IN LISTS EXAMPLES_TESTDATA)
+foreach(f ${EXAMPLES_TESTDATA})
    configure_file(${f} "${CMAKE_CURRENT_BINARY_DIR}/${f}" COPYONLY)
 endforeach()
 
