added test for named segments

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,7 @@
 # tests with CPU backend
 foreach(PROG angle boundary coboundary
             distance_1d distance_2d distance_3d distance_boundary
-            hypercube interface io mesh point
+            hypercube interface io mesh point named_segment
             refinement refinement2 refinement3 refinement-triangles
             scale segment simplex surface
             voronoi_hex voronoi_rect voronoi_tet voronoi_triangle voronoi_line
