seperate include for point accessor new point behaviour   viennagrid::point() does not return reference (functions removed/renamed)   new interface viennagrid::get_point and viennagrid::set_point   point_t: simple ublas::vector like class range: unpack tag fix adapted algorithms: centroid, circumcenter, closest_points, cross_prod, distance, norm, surface, volume adapted examples: accessor, algorithms, viennagrid3_playground adapted tests: surface

--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -3,7 +3,8 @@
 ADD_EXECUTABLE(viennagrid3_playground           viennagrid3_playground.cpp)
 target_link_libraries(viennagrid3_playground    viennagrid)
 
-# add_executable(accessor             accessor.cpp)
+add_executable(accessor             accessor.cpp)
+target_link_libraries(accessor      viennagrid)
 
 ADD_EXECUTABLE(algorithms           algorithms.cpp)
 target_link_libraries(algorithms    viennagrid)
