fixed bounding_box algorithm is_equal_point now has same syntax as is_equal added vertex tolerance to STL reader added use_local_points switch for VTK reader (no point merging) added switch for copying region information in element_copy_map added coboundary_elements function added check if topological dimension is valid in viennagrid_elements_get re-added algorithm/inclusion.hpp CMake fixes/improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ endif(COMMAND cmake_policy)
 
 project(ViennaGrid)
 
-set(VERSION_MAJOR 2)
-set(VERSION_MINOR 1)
+set(VERSION_MAJOR 3)
+set(VERSION_MINOR 0)
 set(VERSION_PATCH 0)
 set(VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
@@ -76,7 +76,8 @@ add_subdirectory(doc)
 # Install
 #########
 
-install(DIRECTORY viennagrid ${CMAKE_CURRENT_BINARY_DIR}/viennagrid
+message("Install dir: ${INSTALL_INCLUDE_DIR}")
+install(DIRECTORY viennagrid ${CMAKE_CURRENT_SOURCE_DIR}/include/viennagrid
    DESTINATION ${INSTALL_INCLUDE_DIR} COMPONENT dev
    FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
 
