added serialization tutorial

--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -72,6 +72,8 @@ target_link_libraries(hierarchy viennagrid)
 add_executable(plc_test    plc_test.cpp)
 target_link_libraries(plc_test viennagrid)
 
+add_executable(serialize    serialize.cpp)
+target_link_libraries(serialize viennagrid)
 
 
 
