--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Tutorials:
 
-ADD_EXECUTABLE(viennagrid3_playground           viennagrid3_playground.cpp)
-target_link_libraries(viennagrid3_playground    viennagrid)
+# ADD_EXECUTABLE(viennagrid3_playground           viennagrid3_playground.cpp)
+# target_link_libraries(viennagrid3_playground    viennagrid)
 
 add_executable(accessor             accessor.cpp)
 target_link_libraries(accessor      viennagrid)
