example finite_elements needs Boost and ViennaCL, added check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
 ################
 
 find_package(Boost)
+find_package(ViennaCL)
 
 include(ViennaGridCommon)
 
