--- a/examples/tutorial/CMakeLists.txt
+++ b/examples/tutorial/CMakeLists.txt
@@ -21,8 +21,9 @@ target_link_libraries(mesh_setup    viennagrid)
 # ADD_EXECUTABLE(finite_volumes       finite_volumes.cpp)
 # target_link_libraries(finite_volumes    viennagrid)
 
-if (Boost_FOUND)
+if (Boost_FOUND AND ViennaCL_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
+  include_directories(${ViennaCL_INCLUDE_DIRS})
   ADD_EXECUTABLE(finite_elements       finite_elements.cpp)
   target_link_libraries(finite_elements    viennagrid)
 endif()
