--- a/examples/benchmark/CMakeLists.txt
+++ b/examples/benchmark/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(create_triangle_mesh             create_triangle_mesh.cpp)
-target_link_libraries(create_triangle_mesh      viennagridpp)
+add_executable(create_mesh             create_mesh.cpp)
+target_link_libraries(create_mesh      viennagridpp)
